2026-01-10
  MiG-17
    - Config: Fix missing comma
2026-01-08
  CH-46D
    - Cleaned up config, new insight on centering by HawaiianRyan
    - Fix spot light after changing origin
  H-2
    - Fix RCS values by HawaiianRyan
  O-1
    - Adjust model and config
        Note that CAS is no longer working
  USS Card
    - Initial Release by James
2026-01-05
  A-1
    - Enhanced config by HawaiianRyan
    - Encyclopedia added by HawaiianRyan
  A-5
    - Moved origin in edm
    - Added comment for this in lua config
  A-37
    - Encyclopedia added by HawaiianRyan
  CH-46D
    - Encyclopedia added by HawaiianRyan
  EC-121/L-1049
    - Enhanced config by HawaiianRyan
    - Encyclopedia added by HawaiianRyan
    - Added nose gear steering to edm
    - Removed radomes from L-1049 distance lods
  H-2
    - Encyclopedia added by HawaiianRyan
    - Enhanced config by HawaiianRyan
  MiG-17
    - Encyclopedia added by HawaiianRyan
  AD-30 USS Solon Turman
    - Initial release of fictive destroyer tender
  PBR MkII
    - Fix gun sounds
    - Fix fore gun using two barrels
2026-01-02
  USS Radford and USS Epperson
    - Initial Release by James
  Charlie and Tango boats
    - Cleanup file structures by Fredy
  USS Allen M Sumner and USS Laffey
    - Improve model and config by James
  A-1, A-37, CH-46D, EC-121/L-1049, H-2, MiG-17
    - Improve lua configs and flight model by HawaiianRyan
  Buildings FARP
    - Improve collision shell for smoother landings
2025-12-28
  USS Bon Homme Richard
    - New parking positions by James
  IX-514
    - New helo landing position by HawaiianRyan
  USS Fletcher
    - Fixed Encyclopedia by Fredy
    - Fixed Liveries by Fredy
    - Cleanup of textures and adding of roughMets by Urbi
  A-37, EC-121, MiG-17, USS Fletcher FRAMII 
    - Update liveries with textures with mipmaps
  EC-121
    - Update SFM with better values from HawaiianRyan
2025-12-23
  PBR MkII
    - Add new Encyclopedia files from Fredy
  Charlie and Tango boats