@@ -173,7 +173,7 @@ GT_t.LN_t.ship_mk12_127mm_AIR.PL = {};
 GT_t.LN_t.ship_mk12_127mm_AIR.PL[1] = {
 	shell_name = {"vwv_cva31_mk12_127mm_AIR"},
 	automaticLoader = false,
-	shot_delay = 3,
+	shot_delay = 4,
 	ammo_capacity = 352,
 };
 
@@ -182,7 +182,7 @@ GT_t.LN_t.ship_mk12_127mm.type = 6
 GT_t.LN_t.ship_mk12_127mm.distanceMin = 20
 GT_t.LN_t.ship_mk12_127mm.distanceMax = 16642
 GT_t.LN_t.ship_mk12_127mm.max_trg_alt = 5410
-GT_t.LN_t.ship_mk12_127mm.reactionTime = 12
+GT_t.LN_t.ship_mk12_127mm.reactionTime = 4
 GT_t.LN_t.ship_mk12_127mm.sensor = {}
 set_recursive_metatable(GT_t.LN_t.ship_mk12_127mm.sensor, GT_t.WSN_t[10])
 GT_t.LN_t.ship_mk12_127mm.PL = {}
@@ -190,7 +190,7 @@ GT_t.LN_t.ship_mk12_127mm.PL[1] = {
 	-- unclear why the 127_Mk49 shells not work
 	shell_name = {"MK45_127"}, --shell_name = { "127_Mk49_HC_1", "127_Mk49_HC_2" },
 	automaticLoader = false,
-	shot_delay = 3,
+	shot_delay = 4,
 	ammo_capacity = 352,
 };
 
