@@ -128,7 +128,7 @@ GT_t.LN_t.ship_mk12_127mm_AIR.PL = {}
 GT_t.LN_t.ship_mk12_127mm_AIR.PL[1] = {
 							shell_name = {"vwv_mul_mk12_127mm_AIR"},
 							automaticLoader = false,
-							shot_delay = 5,
+							shot_delay = 3.5,
 							ammo_capacity = 352,
 						}
 
@@ -137,7 +137,7 @@ GT_t.LN_t.ship_mk12_127mm.type = 6
 GT_t.LN_t.ship_mk12_127mm.distanceMin = 20
 GT_t.LN_t.ship_mk12_127mm.distanceMax = 16642
 GT_t.LN_t.ship_mk12_127mm.max_trg_alt = 5410
-GT_t.LN_t.ship_mk12_127mm.reactionTime = 12
+GT_t.LN_t.ship_mk12_127mm.reactionTime = 4
 GT_t.LN_t.ship_mk12_127mm.sensor = {}
 set_recursive_metatable(GT_t.LN_t.ship_mk12_127mm.sensor, GT_t.WSN_t[10])
 GT_t.LN_t.ship_mk12_127mm.PL = {}
