@@ -1,6 +1,8 @@
 2026-01-10
   MiG-17
     - Config: Fix missing comma
+  Ships
+    - Fix reaction time and shot delay of guns
 2026-01-08
   CH-46D
     - Cleaned up config, new insight on centering by HawaiianRyan
